--- a/release/1.3/release-1.3.org
+++ b/release/1.3/release-1.3.org
@@ -81,13 +81,13 @@
 + [X] Haddocks up to date
 + [X] version bump
 + [X] LICENSE updated
-*** diagrams-contrib [6/8]
+*** diagrams-contrib [7/8]
 + [X] CHANGES updated
 + [X] all CHANGES in user manual or tutorial
 + [X] upper bounds fixed
 + [ ] lower bounds fixed
 + [X] update tested-with field
-+ [ ] Haddocks up to date
++ [X] Haddocks up to date
 + [X] version bump
 + [X] LICENSE updated
 *** statestack [8/8]
@@ -99,24 +99,24 @@
 + [X] Haddocks up to date
 + [X] version bump
 + [X] LICENSE updated
-*** diagrams-cairo [2/8]
+*** diagrams-cairo [6/8]
 + [X] CHANGES updated
 + [X] all CHANGES in user manual or tutorial
 + [X] upper bounds fixed
 + [ ] lower bounds fixed
++ [X] update tested-with field
++ [ ] Haddocks up to date
++ [X] version bump
++ [X] LICENSE updated
+*** diagrams-gtk [6/8]
++ [X] CHANGES updated
++ [X] all CHANGES in user manual or tutorial
++ [X] upper bounds fixed
++ [X] lower bounds fixed
 + [ ] update tested-with field
 + [ ] Haddocks up to date
 + [X] version bump
-+ [ ] LICENSE updated
-*** diagrams-gtk [0/8]
-+ [ ] CHANGES updated
-+ [ ] all CHANGES in user manual or tutorial
-+ [ ] upper bounds fixed
-+ [ ] lower bounds fixed
-+ [ ] update tested-with field
-+ [ ] Haddocks up to date
-+ [ ] version bump
-+ [ ] LICENSE updated
++ [X] LICENSE updated
 *** diagrams-postscript [1/8]
 + [ ] CHANGES updated
 + [ ] all CHANGES in user manual or tutorial
