Upload palette to hackage

--- a/release/1.3/release-1.3.org
+++ b/release/1.3/release-1.3.org
@@ -255,7 +255,7 @@ Packages uploaded to Hackage:
 + [ ] diagrams-solve
 + [ ] diagrams-lib
 + [ ] SVGFonts
-+ [ ] palette
++ [X] palette
 + [ ] force-layout
 + [ ] diagrams-contrib
 + [ ] statestack
