Upload static-canvas to hackage

--- a/release/1.3/release-1.3.org
+++ b/release/1.3/release-1.3.org
@@ -268,6 +268,7 @@ Packages uploaded to Hackage:
 + [ ] diagrams-svg
 + [ ] diagrams-canvas
 + [ ] diagrams-html5
++ [X] jeffreyrosenbluth/static-canvas
 + [ ] diagrams-builder
 + [ ] diagrams-haddock
 + [ ] diagrams-backend-tests
