Add lucid-svg to upload list

--- a/release/1.3/release-1.3.org
+++ b/release/1.3/release-1.3.org
@@ -266,6 +266,7 @@ Packages uploaded to Hackage:
 + [X] cchalmers/texrunner
 + [ ] diagrams-rasterific
 + [ ] diagrams-svg
++ [X] jeffreyrosenbluth/lucid-svg
 + [ ] diagrams-canvas
 + [ ] diagrams-html5
 + [X] jeffreyrosenbluth/static-canvas
