--- a/release/1.3/release-1.3.org
+++ b/release/1.3/release-1.3.org
@@ -117,12 +117,12 @@
 + [X] Haddocks up to date
 + [X] version bump
 + [X] LICENSE updated
-*** diagrams-postscript [1/8]
-+ [ ] CHANGES updated
-+ [ ] all CHANGES in user manual or tutorial
-+ [ ] upper bounds fixed
+*** diagrams-postscript [5/8]
++ [X] CHANGES updated
++ [X] all CHANGES in user manual or tutorial
++ [X] upper bounds fixed
 + [ ] lower bounds fixed
-+ [ ] update tested-with field
++ [X] update tested-with field
 + [ ] Haddocks up to date
 + [X] version bump
 + [ ] LICENSE updated
@@ -182,12 +182,12 @@
 + [X] Haddocks up to date
 + [X] version bump
 + [X] LICENSE updated
-*** diagrams-builder [1/8]
-+ [ ] CHANGES updated
-+ [ ] all CHANGES in user manual or tutorial
-+ [ ] upper bounds fixed
+*** diagrams-builder [5/8]
++ [X] CHANGES updated
++ [X] all CHANGES in user manual or tutorial
++ [X] upper bounds fixed
 + [ ] lower bounds fixed
-+ [ ] update tested-with field
++ [X] update tested-with field
 + [ ] Haddocks up to date
 + [X] version bump
 + [ ] LICENSE updated
