--- a/release/1.3/release-1.3.org
+++ b/release/1.3/release-1.3.org
@@ -1,5 +1,5 @@
-* Release checklist [0/8]
-** TODO go through per-package checklist
+* Release checklist [5/8]
+** DONE go through per-package checklist
 *** monoid-extras [8/8]
 + [X] CHANGES updated
 + [X] all CHANGES in user manual or tutorial
@@ -200,11 +200,11 @@
 + [X] Haddocks up to date
 + [X] version bump
 + [X] LICENSE updated
-** TODO user manual / tutorials [3/3]
+** DONE user manual / tutorials [3/3]
 + [X] make sure all examples build
 + [X] make sure documentation is up-to-date
 + [X] make sure all new features are described/mentioned in the manual
-** TODO testing [2/3]
+** DONE testing [2/3]
 + [ ] check all travis tests
   - all tests are passing, except:
   - [ ] diagrams-doc (hakyll) (this one doesn't matter much)
@@ -212,11 +212,11 @@
   - [ ] diagrams-haddock on 7.8.1 (gcc bug?)
 + [X] run diagrams-backend-tests
 + [X] copy diagrams-backend-tests output to website
-** TODO update release page on website
+** DONE update release page on website
       - See previous versions for format.  Should be possible to
         essentially paste in the relevant parts of the CHANGES files
         for individual repos.
-** TODO diagrams-haddock [2/2]
+** DONE diagrams-haddock [2/2]
 + [X] make sure all diagrams-haddock examples build
 + [X] rebuild all diagrams-haddock examples and check them in
 ** TODO upload packages [1/27]
